# MGIC-Pacman

./: CMakeLists.txt  README.md
Data/Tilemap/: MazeMap.tmx  MazeMap2.tmx
include/tmxlite/: Map.hpp  Tileset.hpp
src/: Game.cpp  Game.h  GameData.h  GameObject.cpp  GameObject.h  ResourceHandler.cpp  ResourceHandler.h  Tileset.cpp  main.cpp
src/Audio/: AudioManager.cpp  AudioManager.h
src/Collectible/: Collectible.cpp  Collectible.h  CollectibleType.h
src/Entity/: Direction.h  Entity.cpp  Entity.h  EntityState.h  Pacman.cpp  Pacman.h
src/Entity/Ghost/: Blinky.cpp  Blinky.h  Clyde.cpp  Clyde.h  Ghost.cpp  Ghost.h  Inky.cpp  Inky.h  Pinky.cpp  Pinky.h
src/GameObject/: Button.cpp  Button.h
src/Gamestate/: Gameplay.cpp  Gameplay.h  Gamestate.cpp  Gamestate.h  States.h  Title.cpp  Title.h
src/Tiles/: Tile.cpp  Tile.h  Tilemap.cpp  Tilemap.h
